--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Random Color Changer</h2>
         <h3><a href="https://github.com/maiastone/color-change-me" title="GitHub" id="project-page">Check out the code on GitHub</a></h3>
         <h3><a href="https://maiastone.github.io/color-change-me/" title="GitHub" id="project-page">See it live on GitHub Pages</a></h3>
-        <img src="images/color-changer.png" alt="Portfolio"/>
+        <img src="./images/color-changer.png" alt="Portfolio"/>
         <h4>About the Project</h4>
         <p>
           I was provided comps showing colors, fonts, and layouts for desktop and for mobile.  Two buttons were required that set a random background color and reset the background color to white.
@@ -81,23 +81,23 @@
       <!-- <img src = "" alt="family"/> -->
       <section class="full card">
         <p>
-          <img src = "images/136-zoom-in.svg">
+          <img src = "./images/136-zoom-in.svg">
           <span class="font">The details.</span> I experience personal satisfaction and inner peace when I find the missing semicolon, or the penny that ties out the financial statements.  I understand the process required to setup a code base, or a chart of accounts.  It all stems from a solid comprehension of the big picture, but a willingness to dig deep and apply a technical skill to solve a problem.
         </p>
         <p>
-          <img src = "images/223-man-woman.svg">
+          <img src = "./images/223-man-woman.svg">
           <span class="font">The people.</span>  Beyond the code, it's about creating remarkable and smooth digital experiences for intentional user groups.  It's not unlike making financial maintenance easier for people by providing clear, concise, financially accurate data.
         </p>
         <p>
-          <img src = "images/176-airplane.svg">
+          <img src = "./images/176-airplane.svg">
           <span class="font">The journey.</span>  I've taken the road less traveled, as an entrepreneur, but I've also climbed the corporate ladder.  I've built a company from the ground up.  My husband and I built our house from the ground up.  Experienced in working alone and making every decision, but have had the pleasure of working with and leading highly functional teams.
         </p>
         <p>
-          <img src = "images/490-svg.svg">
+          <img src = "./images/490-svg.svg">
           <span class="font">The spark.</span>  One of the greatest joys is to see that magic glow in a child's eye.  The best twinkles are of course my own two kids radiant eyes staring back at me and pushing me to be a better person, and a role model.  The nonprofit I cofounded, MindSpark, which has been running tinkering programs in schools and libraries for over five years, also strives to ignite an intellectual spark in kids ages 5-15.
         </p>
         <p>
-          <img src = "images/232-wink.svg">
+          <img src = "./images/232-wink.svg">
           <span class="font">The fun.</span>  When I'm not writing code, you can find me in the yard with my family, and two high energy, Spanish Water Dogs.  We relax in the moutains, and travel as much as we can.  I love yoga, knitting, sewing, and photography.
         </p>
       </section>
