WIP: image links

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!-- <img src = "" alt="family"/> -->
       <section class="full card">
         <p>
-          <img src = "../images/136-zoom-in.svg">
+          <img src = "Images/136-zoom-in.svg">
           <span class="font">The details.</span> I experience personal satisfaction and inner peace when I find the missing semicolon, or the penny that ties out the financial statements.  I understand the process required to setup a code base, or a chart of accounts.  It all stems from a solid comprehension of the big picture, but a willingness to dig deep and apply a technical skill to solve a problem.
         </p>
         <p>
