--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <footer>
       <ul class="footer">
-        <li><a href="https://twitter.com/maiadov"><img src="images/407-twitter.svg" alt="Twitter"/></a></li>
-        <li><a href="https://www.linkedin.com/in/maiastone"><img src="images/459-linkedin2.svg" alt="LinkedIn"/></a></li>
-        <li><a href="https://github.com/maiastone"><img src="images/433-github.svg" alt="GitHub"/></a></li>
+        <li><a href="https://twitter.com/maiadov"><img src="Images/407-twitter.svg" alt="Twitter"/></a></li>
+        <li><a href="https://www.linkedin.com/in/maiastone"><img src="Images/459-linkedin2.svg" alt="LinkedIn"/></a></li>
+        <li><a href="https://github.com/maiastone"><img src="Images/433-github.svg" alt="GitHub"/></a></li>
       </ul>
     </footer>
 
