--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>home</title>
   <link rel="stylesheet" href="reset.css"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -55,14 +55,18 @@
 
 <section id="right-side">
 
-  <header><h2>Portfolio</h2></header>
+  <header><h2>Featured Work</h2></header>
 
       <section class="large card">
 
-        <h2>Random Color Changer</h2>
-        <h3><a href="https://github.com/maiastone/color-change-me" title="GitHub" id="project-page">Check out the code on GitHub</a></h3>
-        <h3><a href="https://maiastone.github.io/color-change-me/" title="GitHub" id="project-page">See it live on GitHub Pages</a></h3>
-        <img src="Images/color-changer.png" alt="Portfolio"/>
+        <h2>Color Randomizer</h2>
+        <div class="card-container">
+          <img src="Images/color-changer.png" alt="Portfolio"/>
+            <div class="card-links">
+              <h3><a href="https://github.com/maiastone/color-change-me" title="GitHub" id="project-page">Check out the code on GitHub</a></h3>
+              <h3><a href="https://maiastone.github.io/color-change-me/" title="GitHub" id="project-page">See it live on GitHub Pages</a></h3>
+            </div>
+        </div>
         <h4>About the Project</h4>
         <p>
           I was provided comps showing colors, fonts, and layouts for desktop and for mobile.  Two buttons were required that set a random background color and reset the background color to white.
@@ -160,15 +164,18 @@
       <header><h2>Education</h2></header>
       <section class ="short-container">
           <section class="medium card">
-            <h5>Masters in Tax, University of Denver</h5>
+            <h5>Masters in Tax</h5>
+            <h6>University of Denver</h6>
           </section>
 
           <section class="medium card">
-            <h5>MBA - Real Estate, University of Denver</h5>
+            <h5>MBA - Real Estate</h5>
+            <h6>University of Denver</h6>
           </section>
 
           <section class="medium card">
-            <h5>Bachelors in Fine Arts - Photography, University of New Mexico</h5>
+            <h5>Bachelors in Fine Arts, Photography</h5>
+            <h6>University of New Mexico</h6>
           </section>
 
       </section>
