WIP: responsive design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>home</title>
+  <title>Maia Stone</title>
   <link rel="stylesheet" href="reset.css"/>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500" rel="stylesheet">
@@ -10,177 +10,178 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="card-style.css">
-  <link rel="stylesheet" type="text/css" href="media.css">
+  <link rel="stylesheet" type="text/css" href="media-queries.css">
+
 </head>
 
 <body id="body">
 
-<section id="left-side">
-    <header>
-      <section class="header-container">
-        <h1>Maia Stone</h1>
-      </section>
-    </header>
-
-    <nav>
-      <ul class="flexNav">
-        <li>
-          <a href="">Home</a>
-        </li>
-
-        <li>
-          <a href="#navLink1">Portfolio</a>
-        </li>
-
-        <li>
-          <a href="#navLink2">About</a>
-        </li>
-
-        <li>
-          <a href="" title="Contact">Contact</a>
-        </li>
-      </ul>
-    </nav>
-
-    <footer>
-      <ul class="footer">
-        <li><a href="https://twitter.com/maiadov"><img src="Images/407-twitter.svg" alt="Twitter"/></a></li>
-        <li><a href="https://www.linkedin.com/in/maiastone"><img src="Images/459-linkedin2.svg" alt="LinkedIn"/></a></li>
-        <li><a href="https://github.com/maiastone"><img src="Images/433-github.svg" alt="GitHub"/></a></li>
-      </ul>
-    </footer>
-
-</section>
-
-
-<section id="right-side">
-
-  <header><h2>Featured Work</h2></header>
-
-      <section class="large card">
-
-        <h2>Color Randomizer</h2>
-        <div class="card-container">
-          <img src="Images/color-changer.png" alt="Portfolio"/>
-            <div class="card-links">
-              <h3><a href="https://github.com/maiastone/color-change-me" title="GitHub" id="project-page">Check out the code on GitHub</a></h3>
-              <h3><a href="https://maiastone.github.io/color-change-me/" title="GitHub" id="project-page">See it live on GitHub Pages</a></h3>
-            </div>
-        </div>
-        <h4>About the Project</h4>
-        <p>
-          I was provided comps showing colors, fonts, and layouts for desktop and for mobile.  Two buttons were required that set a random background color and reset the background color to white.
-        </p>
-        <h4>My Role</h4>
-        <p>
-          Solo Project
-        </p>
-
-      </section>
-
-<!--About me*/-->
+  <section id="left-side">
       <header>
-        <h2>About Me</h2>
+        <section class="header-container">
+          <h1>Maia Stone</h1>
+        </section>
       </header>
-      <!-- <img src = "" alt="family"/> -->
-      <section class="full card">
-        <p>
-          <img src="Images/136-zoom-in.svg">
-          <span class="font">The details.</span> I experience personal satisfaction and inner peace when I find the missing semicolon, or the penny that ties out the financial statements.  I understand the process required to setup a code base, or a chart of accounts.  It all stems from a solid comprehension of the big picture, but a willingness to dig deep and apply a technical skill to solve a problem.
-        </p>
-        <p>
-          <img src="Images/223-man-woman.svg">
-          <span class="font">The people.</span>  Beyond the code, it's about creating remarkable and smooth digital experiences for intentional user groups.  It's not unlike making financial maintenance easier for people by providing clear, concise, financially accurate data.
-        </p>
-        <p>
-          <img src="Images/176-airplane.svg">
-          <span class="font">The journey.</span>  I've taken the road less traveled, as an entrepreneur, but I've also climbed the corporate ladder.  I've built a company from the ground up.  My husband and I built our house from the ground up.  Experienced in working alone and making every decision, but have had the pleasure of working with and leading highly functional teams.
-        </p>
-        <p>
-          <img src="Images/490-svg.svg">
-          <span class="font">The spark.</span>  One of the greatest joys is to see that magic glow in a child's eye.  The best twinkles are of course my own two kids radiant eyes staring back at me and pushing me to be a better person, and a role model.  The nonprofit I cofounded, MindSpark, which has been running tinkering programs in schools and libraries for over five years, also strives to ignite an intellectual spark in kids ages 5-15.
-        </p>
-        <p>
-          <img src="Images/232-wink.svg">
-          <span class="font">The fun.</span>  When I'm not writing code, you can find me in the yard with my family, and two high energy, Spanish Water Dogs.  We relax in the moutains, and travel as much as we can.  I love yoga, knitting, sewing, and photography.
-        </p>
-      </section>
 
-<!-- skills -->
-    <header><h2>Skills &amp; Certifications</h2></header>
-    <div class="short-container">
+      <nav>
+        <ul class="flexNav">
+          <li>
+            <a href="">Home</a>
+          </li>
 
-      <section class="small card">
-        <p class="skills">JavaScript</p>
-      </section>
+          <li>
+            <a href="#navLink1">Portfolio</a>
+          </li>
 
-      <section class="small card">
-        <p class="skills">HTML</p>
-      </section>
+          <li>
+            <a href="#navLink2">About</a>
+          </li>
 
-      <section class="small card">
-        <p class="skills">CSS</p>
-      </section>
+          <li>
+            <a href="" title="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
 
-      <section class="small card">
-        <p class="skills">jQuery</p>
-      </section>
+      <footer>
+        <ul class="footer">
+          <li><a href="https://twitter.com/maiadov"><img src="Images/407-twitter.svg" alt="Twitter"/></a></li>
+          <li><a href="https://www.linkedin.com/in/maiastone"><img src="Images/459-linkedin2.svg" alt="LinkedIn"/></a></li>
+          <li><a href="https://github.com/maiastone"><img src="Images/433-github.svg" alt="GitHub"/></a></li>
+        </ul>
+      </footer>
 
-      <section class="small card">
-        <p class="skills">CPA</p>
-      </section>
+  </section>
 
-      <section class="small card">
-        <p class="skills">MBA</p>
-      </section>
 
-    </div>
+  <section id="right-side">
 
-<!-- work history -->
+    <header><h2>Featured Work</h2></header>
 
-      <header><h2>Experience</h2></header>
-      <p>Download Full Resume</p>
-    <div class = "container">
-      <section class="full card">
-        <h2>Turing School of Software &amp; Design</h2>
-        <h3>Front-End Engineering</h3>
-      </section>
+        <section class="portfolio card">
 
-      <section class="full card">
-        <h2>MindSpark</h2>
-        <h3>MindSpark Inc, Founder, Executive Director, Board Member Denver, CO April 2011</h3>
-        <p>In five years, I developed 38 programs to serve over 1,000 youth, in seven schools and four libraries.  I engage and energize volunteers, board members, event committees, alumni, partnering organizations, and funders.</p>
-      </section>
+          <h2>Color Randomizer</h2>
+          <div class="card-container">
+            <img src="Images/color-changer.png" alt="Portfolio"/>
+              <div class="card-links">
+                <h3><a href="https://github.com/maiastone/color-change-me" title="GitHub" id="project-page">Check out the code on GitHub</a></h3>
+                <h3><a href="https://maiastone.github.io/color-change-me/" title="GitHub" id="project-page">See it live on GitHub Pages</a></h3>
+              </div>
+          </div>
+          <h4>About the Project</h4>
+          <p>
+            I was provided comps showing colors, fonts, and layouts for desktop and for mobile.  Two buttons were required that set a random background color and reset the background color to white.
+          </p>
+          <h4>My Role</h4>
+          <p>
+            Solo Project
+          </p>
 
-      <section class="full card">
-        <h2>MSW Financial Partners</h2>
-        <h3>Office Manager, Bookkeeper, Denver, CO February 2008</h3>
-        <p>Maintain QuickBooks for rental properties, commission income and expenses, and preparation of financial statements.  Successfully managed and maintained complaint records for FINRA and the SEC</p>
-      </section>
+        </section>
 
-    </div>
+  <!--About me*/-->
+        <header>
+          <h2>About Me</h2>
+        </header>
+        <!-- <img src = "" alt="family"/> -->
+        <section class="full card">
+          <p>
+            <img src="Images/136-zoom-in.svg">
+            <span class="font">The details.</span> I experience personal satisfaction and inner peace when I find the missing semicolon, or the penny that ties out the financial statements.  I understand the process required to setup a code base, or a chart of accounts.  It all stems from a solid comprehension of the big picture, but a willingness to dig deep and apply a technical skill to solve a problem.
+          </p>
+          <p>
+            <img src="Images/223-man-woman.svg">
+            <span class="font">The people.</span>  Beyond the code, it's about creating remarkable and smooth digital experiences for intentional user groups.  It's not unlike making financial maintenance easier for people by providing clear, concise, financially accurate data.
+          </p>
+          <p>
+            <img src="Images/176-airplane.svg">
+            <span class="font">The journey.</span>  I've taken the road less traveled, as an entrepreneur, but I've also climbed the corporate ladder.  I've built a company from the ground up.  My husband and I built our house from the ground up.  Experienced in working alone and making every decision, but have had the pleasure of working with and leading highly functional teams.
+          </p>
+          <p>
+            <img src="Images/490-svg.svg">
+            <span class="font">The spark.</span>  One of the greatest joys is to see that magic glow in a child's eye.  The best twinkles are of course my own two kids radiant eyes staring back at me and pushing me to be a better person, and a role model.  The nonprofit I cofounded, MindSpark, which has been running tinkering programs in schools and libraries for over five years, also strives to ignite an intellectual spark in kids ages 5-15.
+          </p>
+          <p>
+            <img src="Images/232-wink.svg">
+            <span class="font">The fun.</span>  When I'm not writing code, you can find me in the yard with my family, and two high energy, Spanish Water Dogs.  We relax in the moutains, and travel as much as we can.  I love yoga, knitting, sewing, and photography.
+          </p>
+        </section>
 
-<!-- education -->
-      <header><h2>Education</h2></header>
-      <section class ="short-container">
-          <section class="medium card">
-            <h5>Masters in Tax</h5>
-            <h6>University of Denver</h6>
-          </section>
+  <!-- skills -->
+      <header><h2>Skills &amp; Certifications</h2></header>
+      <div class="short-container">
 
-          <section class="medium card">
-            <h5>MBA - Real Estate</h5>
-            <h6>University of Denver</h6>
-          </section>
+        <section class="small card">
+          <p class="skills">JavaScript</p>
+        </section>
 
-          <section class="medium card">
-            <h5>Bachelors in Fine Arts, Photography</h5>
-            <h6>University of New Mexico</h6>
-          </section>
+        <section class="small card">
+          <p class="skills">HTML</p>
+        </section>
 
-      </section>
+        <section class="small card">
+          <p class="skills">CSS</p>
+        </section>
 
-</section>
+        <section class="small card">
+          <p class="skills">jQuery</p>
+        </section>
+
+        <section class="small card">
+          <p class="skills">CPA</p>
+        </section>
+
+        <section class="small card">
+          <p class="skills">MBA</p>
+        </section>
+
+      </div>
+
+  <!-- work history -->
+
+        <header><h2>Experience</h2></header>
+        <p>Download Full Resume</p>
+      <div class = "container">
+        <section class="full card">
+          <h2>Turing School of Software &amp; Design</h2>
+          <h3>Front-End Engineering</h3>
+        </section>
+
+        <section class="full card">
+          <h2>MindSpark</h2>
+          <h3>MindSpark Inc, Founder, Executive Director, Board Member Denver, CO April 2011</h3>
+          <p>In five years, I developed 38 programs to serve over 1,000 youth, in seven schools and four libraries.  I engage and energize volunteers, board members, event committees, alumni, partnering organizations, and funders.</p>
+        </section>
+
+        <section class="full card">
+          <h2>MSW Financial Partners</h2>
+          <h3>Office Manager, Bookkeeper, Denver, CO February 2008</h3>
+          <p>Maintain QuickBooks for rental properties, commission income and expenses, and preparation of financial statements.  Successfully managed and maintained complaint records for FINRA and the SEC</p>
+        </section>
+
+      </div>
+
+  <!-- education -->
+        <header><h2>Education</h2></header>
+        <section class ="short-container">
+            <section class="medium card">
+              <h5>Masters in Tax</h5>
+              <h6>University of Denver</h6>
+            </section>
+
+            <section class="medium card">
+              <h5>MBA - Real Estate</h5>
+              <h6>University of Denver</h6>
+            </section>
+
+            <section class="medium card">
+              <h5>Bachelors in Fine Arts, Photography</h5>
+              <h6>University of New Mexico</h6>
+            </section>
+
+        </section>
+
+  </section>
 
 </body>
 
